Feat: Disable bots, Only Crossfire Maps

--- a/valve/default.cfg
+++ b/valve/default.cfg
@@ -2,7 +2,7 @@
 mapchangecfgfile server.cfg
 motdfile motd.txt
 
-hostname "HLDS Docker dproto(47/48)"
+hostname "HLDS Docker Casanay"
 
 maxplayers 12
 mp_autocrosshair "0"
@@ -10,7 +10,7 @@ mp_falldamage "0"
 mp_flashlight "1"
 mp_logdetail "0"
 mp_logfile "0"
-mp_timelimit "15"
+mp_timelimit "0"
 pausable "0"
 secure "1"
 sv_aim "0"
